My First Commit

--- a/Mod2_Solution/index.html
+++ b/Mod2_Solution/index.html
@@ -32,7 +32,7 @@
                 <p class="section-title" id="main_course">Main-Course</p>
                 <div class="paragraph">
                    <ul>In The Main Course We Have
-                    <li>Matter Paneer</li>
+                    <li>Mutter Paneer</li>
                     <li>Kadhai Paneer</li>
                     <li>Paneer Butter Masala</li>
                     <li>Mix veg</li>
